--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ scale=1.0">
         <p> </p>
         <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
         <img class="estudante-icone" src="instagram (1).png" alt="Link do Instagram">
-        <img class="sociais" src="facebook (1).png" alt="Facebook da Escola">
+        <img class="estudante-icone" src="facebook (1).png" alt="Link do Facebook">
         </div>
         </div>
         </section>
